@@ -1,3 +1,14 @@
+2012-11-09  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r134051.
+        http://trac.webkit.org/changeset/134051
+        https://bugs.webkit.org/show_bug.cgi?id=101757
+
+        It didn't fix the build (Requested by Ossy on #webkit).
+
+        * dfg/DFGCCallHelpers.h:
+        (JSC::DFG::CCallHelpers::setupArgumentsWithExecState):
+
 2012-11-09  Gabor Ballabas  <gaborb@inf.u-szeged.hu>
 
         [Qt] r133953 broke the ARM_TRADITIONAL build
